2006-12-08  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-topic-comment-list-regexp): Fix regexp.
	(mixi-message): Rename the STRING argument to STRINGS.
	(mixi-login): Follow the cange above.
	(mixi-parse-buffer): Fix error message.

2006-12-07  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-diary-owner-nick-regexp): Fix regexp.
	(mixi-topic-owner-regexp): Ditto.

2006-12-05  OHASHI Akira  <bg66@koka-in.org>

	* sb-mixi.el (shimbun-mixi-logout-p): New user option.
	(shimbun-mixi-initialize-comment-cache): New macro.
	(initialize-instance): Use it.
	(shimbun-close): New method.

2006-12-04  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-url-encode-and-quote-percent-string): New function.
	(mixi-search-diary-list-page): New macro.
	(mixi-search-diary-list-regexp): New regexp.
	(mixi-search-diaries): New function.
	(mixi-diary-closed-regexp): New regexp.
	(mixi-diary-realize): Use it.

	* sb-mixi.el (shimbun-mixi-group-alist): Fix docs.

2006-12-04  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-diary-content-regexp): Fix regexp.

2006-12-01  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-diary-comment-list-page): Use `full=1' instead of
	`page=%d'.
	(mixi-get-comments): Get comments in latest order.

2006-12-01  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-parse-buffer): Rename from `mixi-retrieve-1', and
	swap `buffer' argument and `url'.
	(mixi-url-retrieve): Follow the change above.
	(mixi-w3m-retrieve): Ditto.
	(mixi-curl-retrieve): Ditto.

2006-11-30  OHASHI Akira  <bg66@koka-in.org>

	* mixi.el (mixi-get-matched-items): Rename `max-numbers' to `range',
	and swap `range' and `regexp'.
	(mixi-get-friends): Follow the change above.
	(mixi-get-favorites): Ditto.
	(mixi-get-logs): Ditto.
	(mixi-get-diaries): Ditto.
	(mixi-get-new-diaries): Ditto.
	(mixi-get-communities): Ditto.
	(mixi-get-bbses): Ditto.
	(mixi-get-new-bbses): Ditto.
	(mixi-get-comments): Ditto.
	(mixi-get-new-comments): Ditto.
	(mixi-get-messages): Ditto.